--- a/client/views/partials/admin/services/addNewAccount.html
+++ b/client/views/partials/admin/services/addNewAccount.html
@@ -23,7 +23,7 @@
                                    {{availableStatusError}}</small>
                            </span>
                     </div>
-                    <div class="col-sm-6">
+                  <div class="col-sm-6">
                         <div class="form-group">
                             <select class="form-control custom-form-control" ng-model="accountDetails.role">
                                 <option value="" selected>Type*</option>
@@ -64,6 +64,14 @@
                             <label class="focus-effect-for-input">Email*</label>
                         </div>
                     </div>
+                <div class="col-sm-6">
+                    <div class="form-group">
+                        <select class="form-control custom-form-control" ng-model="accountDetails.roleName">
+                            <option value="" selected>Select Role*</option>
+                            <option ng-repeat="role in roles"  value={{role.role}}>{{role.role}}</option>
+                        </select>
+                    </div>
+                </div>
             </div>
         </uib-accordion>
         <uib-accordion>
