--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -164,7 +164,7 @@
         </span>
         <span ng-if="jobsForSelectedPart.length>0">
                 <div class="col-xs-12 pall-zero mb-10">
-                    <h2 class="table-name">Previous Job for selected part location:{{job.partLocation}}</h2>
+                    <h2 class="table-name">Previous Job for selected {{vehicle}} and {{job.partLocation}} </h2>
                 </div>
                 <div class="mt-10">
                     <table class="table table-bordered table-striped table-condensed table-hover"
