--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -2599,12 +2599,12 @@ select {
     background: red !important;
 
 }
-label > input { /* HIDE RADIO */
+.settings label > input { /* HIDE RADIO */
     visibility: hidden; /* Makes input not-clickable */
     position: absolute; /* Remove input from document flow */
 }
 
-label > input + img { /* IMAGE STYLES */
+.settings label > input + img { /* IMAGE STYLES */
     cursor: pointer;
 
 }
