--- a/client/views/index.html
+++ b/client/views/index.html
@@ -8,6 +8,8 @@
     <link href="components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="dist/components/components.min.css" type="text/css">
     <link rel="stylesheet" type="text/css" href="dist/css/all.css" type="text/css">
+    <link rel="stylesheet" href="css/multi-select.css" type="text/css">
+
 
 </head>
 
@@ -212,6 +214,7 @@
 <script src="http://maps.google.com/maps/api/js?v=3&key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M&libraries=places"></script>
 <!--Date Time Picker --->
 <script src="components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
+<script type="text/javascript" src="js/multiselect.js"></script>
 <!--app-->
 <!--<script src="js/app.js"></script>-->
 
