--- a/client/views/partials/SubLogins/add-editUser.html
+++ b/client/views/partials/SubLogins/add-editUser.html
@@ -31,6 +31,22 @@
                 <label class="focus-effect-for-input" aria-hidden="true">Contact Phone</label>
             </div>
         </div>
+
+    </div>
+    <div class="col-sm-6">
+        <div class="form-group col-xs-12">
+            <div class="">
+                <!--<input type="text" class="form-control custom-form-control" ng-model="user.permissionRole"/>-->
+                <!--<label class="focus-effect-for-input" aria-hidden="true">Assign Role(s)</label>-->
+                <!--Blue select-->
+                <label>Roles and Permission</label><br>
+                <select id="multi-select-demo" multiple="multiple" ng-model="user.roles">
+                    <option value="{{role._id}}" ng-repeat="role in roles">{{role.role}}</option>
+                </select>
+
+            </div>
+        </div>
+        <div class="clearfix"></div>
     </div>
     <div class="col-xs-12">
         <div class="col-xs-4 mtb-25 sub-can">
@@ -39,3 +55,13 @@
         </div>
     </div>
 </div>
+
+<script type="text/javascript">
+
+    $(document).ready(function() {
+
+        $('#multi-select-demo').multiselect();
+
+    });
+
+</script>
