fixed assigning a role to user

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -3351,3 +3351,7 @@ textarea.form-control {
     font-weight: 500;
     padding: 7px;
 }
+.role-scroll{
+    height: 250px;
+    overflow-y: auto;
+}
