--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -66,7 +66,7 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
-                        <input ng-model="trip.from" type="text" class="form-control custom-form-control" id="source"
+                        <input ng-model="trip.sourceAddress" type="text" class="form-control custom-form-control" id="source"
                                ng-change="searchSource()">
                         <label class="focus-effect-for-input" aria-hidden="true">From</label>
 
@@ -74,7 +74,7 @@
                 </div>
                 <div class="form-group col-xs-12">
                     <div class="styling-input-list">
-                        <input ng-model="trip.to" type="text" class="form-control custom-form-control"
+                        <input ng-model="trip.destinationAddress" type="text" class="form-control custom-form-control"
                                id="destination" ng-change="searchDestination()">
                         <label class="focus-effect-for-input" aria-hidden="true">To</label>
                     </div>
