Adding Geo Fence reports

--- a/client/views/partials/geoFences/GeoFencesReports.html
+++ b/client/views/partials/geoFences/GeoFencesReports.html
@@ -43,10 +43,10 @@
                 gfr.depot }}
             </td>
             <td data-title="'Start time'" sortable="'start'" class="clickable-item">{{
-                gfr.start | date : 'medium' || '--'}}
+                gfr.startTime | date : 'medium' || '--'}}
             </td>
             <td data-title="'End Time'" sortable="'end'" class="clickable-item">{{
-                gfr.end |  date : 'medium' || '--'}}
+                gfr.endTime |  date : 'medium' || '--'}}
             </td>
 
 
