registrationNo changed to truckId in trips module

--- a/client/views/partials/reports/expenseByVehicles.html
+++ b/client/views/partials/reports/expenseByVehicles.html
@@ -184,7 +184,7 @@
 
             <table id="expenselist"
                    class="table table-bordered table-striped table-condensed table-hover"
-                   cellspacing="0" width="100%">
+                   cellspacing="0" width="100%" ng-init="getExpenseByVehicle();">
                 <tfoot>
                 <tr>
                     <th>Total</th>
