--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -152,6 +152,9 @@
                             <td data-title="'milege'" class="clickable-item">
                                 {{record.milege}}
                             </td>
+                            <td data-title="'partLocation'" class="clickable-item">
+                                {{record.partLocation}}
+                            </td>
                             <td data-title="'Job Type'" class="clickable-item">
                                 {{record.type.expenseName}}
                             </td>
@@ -199,6 +202,9 @@
                         </td>
                         <td data-title="'Last Job Date'" class="clickable-item">
                             {{record.date | date:'dd-MM-y'}}
+                        </td>
+                        <td data-title="'partLocation'" class="clickable-item">
+                                {{record.partLocation}}
                         </td>
                         <td data-title="'milege'" class="clickable-item">
                             {{record.milege}}
