--- a/client/views/partials/inventories/inventoriesList.html
+++ b/client/views/partials/inventories/inventoriesList.html
@@ -2,11 +2,11 @@
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-2 pall-zero"><h3>Inventories</h3></div>
         <ul class="col-sm-10 pall-zero list-inline">
-            <li class="col-sm-2 pall-zero">
+            <li class="col-sm-3 pall-zero">
                 <date-picker ng-model="fromDate" class="'paymentscontrol'"
                              past-present="'pastPresentDate'" placeholder="'from date'"></date-picker>
             </li>
-            <li class="col-sm-2 pall-zero">
+            <li class="col-sm-3 pall-zero">
                 <date-picker class="'paymentscontrol'" past-present="'pastPresentDate'" ng-model="toDate"
                              placeholder="'to date'" ></date-picker>
             </li>
@@ -60,6 +60,9 @@
                     <a href="#" class="btn" ng-click="delete(inventory._id)">
                         <span class="glyphicon glyphicon-remove"></span>
                     </a>
+                    <a href="#" class="btn" ng-click="invenHistory(inventory)">
+                        <span class="glyphicon glyphicon-header"></sp
+                    </a>
                 </td>
             </tr>
             <tr ng-if="!currentPageOfinventories || currentPageOfinventories.length === 0">
@@ -74,3 +77,39 @@
         </figure>
     </div>
 </div>
+
+<script type="text/ng-template" id="inventoryHistory.html">
+    <div class="modal-header">
+        <h3 class="modal-title">{{inventoryType}} - History</h3>
+    </div>
+    <div class="modal-body">
+        <div class="row">
+            <table class="table table-bordered table-striped table-condensed table-hover"
+                   ng-table="inventoryParams">
+                <tr ng-repeat="record in jobsForInventory " style="text-align: center;">
+                    <td data-title="'Vehicle'" class="clickable-item">
+                        {{record.vehicle.registrationNo}}
+                    </td>
+                    <td data-title="'Last Job Date'" class="clickable-item">
+                        {{record.date | date:'dd-MM-y'}}
+                    </td>
+                    <td data-title="'Odometer'" class="clickable-item">
+                        {{record.milege || '---'}}
+                    </td>
+                    <td data-title="'Uninstall Odometer'" class="clickable-item">
+                        {{record.unInstallMilege || '---'}}
+                    </td>
+                    <td data-title="'Job Type'" class="clickable-item">
+                        {{record.type.expenseName || '---'}}
+                    </td>
+                </tr>
+                <tr ng-if="!jobsForInventory.length || jobsForInventory.length === 0">
+                    <td colspan="10">No Records exist.</td>
+                </tr>
+            </table>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" type="button" ng-click="closeHistory();">Close</button>
+    </div>
+</script>
