--- a/client/views/partials/reminders/addReminder.html
+++ b/client/views/partials/reminders/addReminder.html
@@ -3,7 +3,7 @@
     <div class="col-sm-6 col-xs-12 mt-10">
         <div class="form-group col-xs-12">
             <date-picker id="fitnessExpiry" ng-model="reminder.reminderDate"
-                         class="'custom-form-control'" placeholder="'Reminder Date'"></date-picker>
+                         class="'custom-form-control'" placeholder="'Reminder Date*'"></date-picker>
         </div>
         <div class="form-group col-xs-12">
             <input type="text" ng-model="reminder.reminderText"
