--- a/client/views/partials/inventories/inventoriesList.html
+++ b/client/views/partials/inventories/inventoriesList.html
@@ -49,7 +49,7 @@
                     {{inventory.id}}
                 </td>
                 <td data-title="'Vehicle'" sortable="'vehicle'" class="clickable-item">
-                    {{inventory.vehicle}}
+                    {{inventory.vehicle || '---'}}
                 </td>
                 <td data-title="'Supplier'" sortable="'supplier'" class="clickable-item">
                     {{inventory.partyId.name}}
@@ -60,8 +60,8 @@
                     <a href="#" class="btn" ng-click="delete(inventory._id)">
                         <span class="glyphicon glyphicon-remove"></span>
                     </a>
-                    <a href="#" class="btn" ng-click="invenHistory(inventory)">
-                        <span class="glyphicon glyphicon-header"></sp
+                    <a href="#" class="btn" ng-click="invenHistory(inventory)" ng-show="inventory.vehicle">
+                        <span class="glyphicon glyphicon-header"></span>
                     </a>
                 </td>
             </tr>
