--- a/client/views/partials/admin/administrators/administratorMenu.html
+++ b/client/views/partials/admin/administrators/administratorMenu.html
@@ -6,11 +6,11 @@
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.adminLogHistory">Admin Log History</a></li>
         <li ui-sref-active="activated"><a href="#" ui-sref="admin.franchises">Franchise</a></li>
         <li >
-            <button class="btn btn-primary" ng-click="syncAccountsToUserLogins()">SyncUserLogins</button>
+            <button class="btn btn-primary" ng-click="syncAccountsToUserLogins()">SyncToUserLogins</button>
         </li>
-        <li >
-            <button class="btn btn-primary" ng-click="syncDatabase()">SyncAccounts</button>
-        </li>
+        <!--<li >-->
+            <!--<button class="btn btn-primary" ng-click="syncDatabase()">SyncAccounts</button>-->
+        <!--</li>-->
     </ul>
     <button>
     <ui-view></ui-view>
