Changing GPS devices

--- a/client/views/partials/Jobs/add_editJob.html
+++ b/client/views/partials/Jobs/add_editJob.html
@@ -90,7 +90,7 @@
         <div class="form-group col-xs-12">
             <div class="styling-input-list">
                 <input type="text" class="form-control custom-form-control" ng-model="job.milege"/>
-                <label class="focus-effect-for-input" aria-hidden="true">Milege*</label>
+                <label class="focus-effect-for-input" aria-hidden="true">Odometer Reading*</label>
             </div>
         </div>
         <div class="form-group col-xs-12">
