--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -73,6 +73,9 @@
                         <td data-title="'Address'" class="clickable-item">
                             {{report.address}}
                         </td>
+                        <td data-title="'ZipCode'" class="clickable-item">
+                            {{report.zipcode}}
+                        </td>
                         <td data-title="'Speed Km/hr'" class="clickable-item">
                             {{report.speed | number:0}}
                         </td>
