--- a/client/views/partials/liveTracking.html
+++ b/client/views/partials/liveTracking.html
@@ -10,8 +10,8 @@
                 <div ng-if="!message">
                     <div id="map" style="width: 100%; height: 500px;"></div>
                 </div>
-                <div ng-if="message">
-                    <span class="bg-danger" style="">{{message}}</span>
+                <div  class="bg-danger" ng-if="message" style="text-align: center;background-color: #ffffff61;padding: 50px;margin-top: 20px;">
+                    <span>{{message}}!</span>
                 </div>
 
             </div>
