--- a/client/views/partials/gps/gpsReports.html
+++ b/client/views/partials/gps/gpsReports.html
@@ -58,7 +58,7 @@
             </div>
             <div class="col-xs-12 mt-25">
        <!--             <a ui-sref="devices" class="btn btn-info pull-right mb-10">Devices</a>-->
-                Vehicle Number : {{reportParams.truckNo.registrationNo || reportParams.truckNo}}
+                Vehicle Number:<span style="color: black">{{reportParams.truckNo.registrationNo || reportParams.truckNo}}</span>
                 <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
                     <tr style="text-align: center;" ng-repeat="report in truckReports">
                         <td data-title="'Date & Time'" class="clickable-item">
