--- a/client/views/partials/admin/administrators/accessPermission.html
+++ b/client/views/partials/admin/administrators/accessPermission.html
@@ -1,6 +1,6 @@
 <div class="permission" ng-controller="accessPermissionCtrl" ng-init="adminRolesDropDown();">
-    <div class="col-sm-12 roleTable" style="width: 1000px;overflow-x: scroll;">
-        <table class="table table-res table-bordered rolesTable">
+    <div class="col-sm-12">
+        <table class="table table-res table-bordered">
             <thead>
             <tr>
                 <th style="text-align: left;border-right: 1px solid #ccc;">Modules</th>
