--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -105,7 +105,7 @@
                                 <li>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="active" value="true"
+                                            <input type="radio" name="active" ng-value="true"
                                                    ng-model="deviceDetails.isActive">
                                             <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
                                             Enable
@@ -115,7 +115,7 @@
                                 <li>
                                     <div class="radio">
                                         <label>
-                                            <input type="radio" name="active" value="false"
+                                            <input type="radio" name="active" ng-value="false"
                                                    ng-model="deviceDetails.isActive">
                                             <span class="cr"><i class="cr-icon fa fa-circle"></i></span>
                                             Disable
