--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -72,8 +72,11 @@
                         <td data-title="'Status'" class="clickable-item col-sm-2">{{truck.status}}
                         </td>
                         <td data-title="'Share'" class="clickable-item col-sm-2">
-                            <button class="btn btn-info" ng-click="shareTracking(truck._id, truck.registrationNo)"><i
-                                    class="fa fa-share-alt" aria-hidden="true"></i></button>
+                            <a href="#" class="btn pad-6" ng-click="shareTracking(truck._id, truck.registrationNo)"><i
+                                    class="fa fa-share-alt" aria-hidden="true"></i></a>
+                            <a href="#" class="btn pad-6" ng-click="deleteShareTracking(truck)" class="delete_icon">
+                                <span class="glyphicon glyphicon-trash"></span>
+                            </a>
                         </td>
                         <!--<td data-title="'Action'" sortable="'totalPayment'" class="clickable-item col-sm-1">
                             <i class="fa fa-edit" style="font-size: 20px;"></i>
