--- a/client/views/partials/settings/gpsSettings.html
+++ b/client/views/partials/settings/gpsSettings.html
@@ -47,7 +47,7 @@
                         <div class="col-xs-12 styling-input-list">
                             <input type="text" ng-model="gpsSettingsParams.stopTime"
                                    class="form-control custom-form-control">
-                            <label class="focus-effect-for-input" aria-hidden="true">Stop Alert Time</label>
+                            <label class="focus-effect-for-input" aria-hidden="true">Stop Alert Time in minutes</label>
                         </div>
                         <div class="clearfix"></div>
                     </div>
