--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -8,7 +8,7 @@
             <button class="btn btn-primary" ui-sref="services.addDevice">Add Devices</button>
         </li>
         <li class="pull-right col-sm-2 col-xs-12 mobile-mar">
-            <select class="form-control" ng-model="sortableString" ng-change="init()">
+            <select class="form-control" ng-model="sortableString.sortableString" ng-change="getCount()">
                 <option selected value="">Select</option>
                 <option value="damaged">Damaged</option>
                 <option value="notdamaged">Not Damaged</option>
@@ -20,8 +20,8 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-                           ng-model="searchString">
-                    <div class="input-group-btn" ng-click="init();">
+                           ng-model="searchString.searchParams">
+                    <div class="input-group-btn" ng-click="getCount();">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
