--- a/client/views/partials/admin/services/erpAccounts.html
+++ b/client/views/partials/admin/services/erpAccounts.html
@@ -17,8 +17,8 @@
             <form role="search">
                 <div class="input-group add-on">
                     <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term"
-                           ng-model="searchString">
-                    <div class="input-group-btn" ng-click="init();">
+                           ng-model="searchString.searchParams">
+                    <div class="input-group-btn" ng-click="getCount();">
                         <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i>
                         </button>
                     </div>
